# tuick

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  TODO.md  fmt_ef.py  justfile  pyproject.toml
docs/: PLAN-errorformat-integration.md  codebase-map.md  errorformat-guide.md  reference-fzf.md  reference-subprocess.md
src/: tuick.py
src/tuick/: ansi.py  cli.py  console.py  editor.py  errorformat.py  errorformats.py  fzf.py  monitor.py  parser.py  reload_socket.py  shell.py  theme.py  tool_registry.py
tests/: __init__.py  conftest.py  test_cli.py  test_console.py  test_data.py  test_editor.py  test_errorformat.py  test_monitor.py  test_parser.py  test_reload_socket.py  test_tool_registry.py  test_tuick.py
